update file index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clase</title>
+    <title>Document</title>
 </head>
 <body>
-    
+     <!-- Titulo de la Pagina -->
+    <!-- <h1>Kevin Diaz</h1>
+    <h2>24osdania</h2>
+    <h3>24osdania</h3>
+    <h5>24osdania</h5>
+    <h6>24osdania</h6>
+    <p>24osdania</p>
+    <span>24osdania</span> -->
+    <!-- Tabla -->
+    <table border="1">
+     <caption> tabla de posiciones </caption>
+        <thead>
+            <tr>
+                <th>EQUIPO</th>
+                <th>PARTIDOS</th>
+                <th>PUNTOS</th>
+                <th>ESCUDO</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Colombia</td>
+                <td>5</td>
+                <td>15</td>
+                <td>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Escudo_de_la_Federaci%C3%B3n_Colombiana_de_F%C3%BAtbol.png" alt="Escudo de la seleccion de Colombia" width="100px" height="100px">
+                </td>
+            </tr>
+            <tr>
+                <td>Argentina</td>
+                <td>4</td>
+                <td>12</td>
+                <td><img src="img/argentina.png" alt="" width="100px" height="100px"></td>
+            </tr>
+            <tr>
+                <td>Brasil</td>
+                <td>3</td>
+                <td>9</td>
+                <td><img src="img/brazil.png" alt="" width="100px " height="100px"></td>
+            </tr>
+            <tr>
+                <td>Venezuela</td>
+                <td>2</td>
+                <td>6</td>
+                <td><img  src="img/escudo de venezuela.png" width="100px" height="100px"></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="4"> eliminacion mundial 2026 
+                
+                </td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 </html>
