--- a/html/tablas.html
+++ b/html/tablas.html
@@ -14,7 +14,8 @@
      <caption> tabla de posiciones </caption>
         <thead>
             <tr>
-                <th>EQUIPO</th>
+                <th colspan="4">Region</th>
+                <th>EQUIPOS</th>
                 <th>PARTIDOS</th>
                 <th>PUNTOS</th>
                 <th>ESCUDO</th>
@@ -22,6 +23,7 @@
         </thead>
         <tbody>
             <tr>
+                <td rowspan="4" colspan="4">Equipos latinos</td>
                 <td>Colombia</td>
                 <td>5</td>
                 <td>15</td>
@@ -50,11 +52,59 @@
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="4"> eliminacion mundial 2026 
-                
-                </td>
+                <td colspan="4"> eliminacion mundial 2026  </td>
             </tr>
         </tfoot>
+
+
+
+
     </table>
+    <table border="1">
+        <caption> tabla de posiciones </caption>
+           <thead>
+               <tr>
+                   <th colspan="4">origen</th>
+                   <th>produlto</th>
+                   <th></th>
+                   <th>año</th>
+                   <th>imagen</th>
+               </tr>
+           </thead>
+           <tbody>
+               <tr>
+                   <td rowspan="4" colspan="4"></td>/td>colombia</td>
+                   <td>nusita</td>
+                   <td></td>
+                   <td>1979 </td>
+                   <td>
+                       <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Escudo_de_la_Federaci%C3%B3n_Colombiana_de_F%C3%BAtbol.png" alt="Escudo de la seleccion de Colombia" width="100px" height="100px">
+                   </td>
+               </tr>
+               <tr>
+                   <td>chocoramo</td>
+                   <td></td>
+                   <td>1972</td>
+                   <td><img src="../img/argentina.png" alt="" width="100px" height="100px"></td>
+               </tr>
+               <tr>
+                   <td>bom bom bum</td>
+                   <td></td>
+                   <td>1970</td>
+                   <td><img src="../img/brazil.png" alt="" width="100px " height="100px"></td>
+               </tr>
+               <tr>
+                   <td>jet</td>
+                   <td></td>
+                   <td>1961</td>
+                   <td><img  src="../img/escudo de venezuela.png" width="100px" height="100px"></td>
+               </tr>
+           </tbody>
+           <tfoot>
+               <tr>
+                   <td colspan="4">delisias colombianas </td>
+               </tr>
+           </tfoot>
+       </table> 
 </body>
 </html>
