update file table

--- a/html/tablas.html
+++ b/html/tablas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tablas</title>
 </head>
 <body>
     <a href="../index.html">
@@ -35,19 +35,19 @@
                 <td>Argentina</td>
                 <td>4</td>
                 <td>12</td>
-                <td><img src="../img/argentina.png" alt="" width="100px" height="100px"></td>
+                <td><img src="../multimedia/argentina.png" alt="" width="100px" height="100px"></td>
             </tr>
             <tr>
                 <td>Brasil</td>
                 <td>3</td>
                 <td>9</td>
-                <td><img src="../img/brazil.png" alt="" width="100px " height="100px"></td>
+                <td><img src="../multimedia/brazil.png" alt="" width="100px " height="100px"></td>
             </tr>
             <tr>
                 <td>Venezuela</td>
                 <td>2</td>
                 <td>6</td>
-                <td><img  src="../img/escudo de venezuela.png" width="100px" height="100px"></td>
+                <td><img  src="../multimedia/escudo de venezuela.png" width="100px" height="100px"></td>
             </tr>
         </tbody>
         <tfoot>
@@ -61,50 +61,42 @@
 
     </table>
     <table border="1">
-        <caption> tabla de posiciones </caption>
+        <caption> Productos </caption>
            <thead>
                <tr>
                    <th colspan="4">origen</th>
                    <th>produlto</th>
-                   <th></th>
+         
                    <th>año</th>
                    <th>imagen</th>
                </tr>
            </thead>
            <tbody>
                <tr>
-                   <td rowspan="4" colspan="4"></td>/td>colombia</td>
+                   <td rowspan="4" colspan="4">colombia</td>
                    <td>nusita</td>
-                   <td></td>
                    <td>1979 </td>
                    <td>
-                       <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Escudo_de_la_Federaci%C3%B3n_Colombiana_de_F%C3%BAtbol.png" alt="Escudo de la seleccion de Colombia" width="100px" height="100px">
+                       <img src="https://mecato.shop/cdn/shop/products/nucita-1.jpg?v=1643895776" alt="Nusita" width="100px" height="100px">
                    </td>
                </tr>
                <tr>
                    <td>chocoramo</td>
-                   <td></td>
                    <td>1972</td>
-                   <td><img src="../img/argentina.png" alt="" width="100px" height="100px"></td>
+                   <td><img src="https://www.vanguardia.com/binrepository/1200x675/0c24/1200d628/upper-right/12204/UCKW/chocoramo-reforma-tributaria_8050935_20230302101522.jpg" alt="chocoramo" width="100px" height="100px"></td>
                </tr>
                <tr>
                    <td>bom bom bum</td>
-                   <td></td>
                    <td>1970</td>
-                   <td><img src="../img/brazil.png" alt="" width="100px " height="100px"></td>
+                   <td><img src="https://www.semana.com/resizer/7PaNhoud5BvKXPOgP7eyNlAEuoE=/1920x1080/smart/filters:format(jpg):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/semana/MNLCQSFJRNEJRLEVUR5XKTWZ6E.jpg" alt="Bom bom bun"  width="100px " height="100px"></td>
                </tr>
                <tr>
                    <td>jet</td>
-                   <td></td>
                    <td>1961</td>
-                   <td><img  src="../img/escudo de venezuela.png" width="100px" height="100px"></td>
+                   <td><img  src="https://img.lalr.co/cms/2013/04/29233607/0000046937013604_xl_a.jpg?size=xl" alt="Jet" width="100px" height="100px"></td>
                </tr>
            </tbody>
-           <tfoot>
-               <tr>
-                   <td colspan="4">delisias colombianas </td>
-               </tr>
-           </tfoot>
+           
        </table> 
 </body>
 </html>
