update file form

--- a/html/form.html
+++ b/html/form.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulario</title>
 </head>
 <body>
     <a href="../index.html">volver atras </a>
     <form action="">
         <fieldset>
-            <legend>informacion persinal</legend>
+            <legend>informacion personal</legend>
             <label for="">nombre</label>
             <input type="text">
             <br>
@@ -22,9 +22,10 @@
             <br>
             <label for="">fecha de nacimiento</label>
             <input type="date">
-            <br><input type="number">
-            <br><input type="file">
-            <br><input type="color">
+            <br><input type="number">Ponga su fijo
+            <br><input type="file">Suba una imagen
+            <br><input type="color">Ponga el color negro
+            <br><input type="checkbox" name="username-enabled"> Presione la casillla para continuar
         </fieldset>
         <form action="">
             <fieldset>
