--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div>
         <li><a href="html/tablas.html"><h2>ir a tablas </h2></a></li>
         <li><a href="html/form.html"><h2>ir a formulario  </h2></a></li>
-        <li><a href="html/tablas.html"><h2>ir a tablas </h2></a></li>
+        <li><a href="html/text.html"><h2>ir a texto </h2></a></li>
+        <li><a href="html/semanticas.html"><h2>ir a semanticas</h2></a></li>
+        <li><a href="html/agrupasiòn.html"><h2>ir a agrupaciòn</h2></a></li>
+        <li><a href="html/multimedia.html"></a><h1>Ir a multimedia</h1></li>
     </div>
 </body>
 </html>
