update file archive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="html/text.html"><h2>ir a texto </h2></a></li>
         <li><a href="html/semanticas.html"><h2>ir a semanticas</h2></a></li>
         <li><a href="html/agrupasiòn.html"><h2>ir a agrupaciòn</h2></a></li>
-        <li><a href="html/multimedia.html"></a><h1>Ir a multimedia</h1></li>
+        <li><a href="html/multimedia.html"><h1>Ir a multimedia</h1></a></li>
     </div>
 </body>
 </html>
