--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <li><a href="html/semanticas.html"><h2>ir a semanticas</h2></a></li>
         <li><a href="html/agrupasiòn.html"><h2>ir a agrupaciòn</h2></a></li>
         <li><a href="html/multimedia.html"><h1>Ir a multimedia</h1></a></li>
+
+        <!-- shift + flecha_arriba = duplicar una linea -->
+        <!-- crtl + shift + k = borrar linea -->
+        <!-- crtl + } = comentarios -->
     </div>
 </body>
 </html>
